        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=15235
        Options can not be removed from a Select element with OptGroup's using JavaScript

        Remove HTMLOptionElement children against the proper parent node.


Canonical link: https://commits.webkit.org/20126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25668 268f45cc-cd09-0410-ab3c-d52691b4dbfc